--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,1 +1,24 @@
-<h1>Coba aja ini mah</h1>
+
+
+
+{% comment %} <h1>Coba aja ini mah</h1>
+
+<img src="{% static 'images/images.jpeg' %}"> {% endcomment %}
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Rendi Ramadhan</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css" >
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        {% load static %}
+    </head>
+    <body>
+        
+        <script src="" async defer></script>
+    </body>
+</html>
