--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,9 +1,5 @@
 
-
-
-{% comment %} <h1>Coba aja ini mah</h1>
-
-<img src="{% static 'images/images.jpeg' %}"> {% endcomment %}
+{% load static %}
 
 <!DOCTYPE html>
 <html>
@@ -15,10 +11,91 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="{% static '/css/main.css' %}" rel="stylesheet" type="text/css" >
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        {% load static %}
+        
     </head>
     <body>
-        
-        <script src="" async defer></script>
+        <br>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <div class="card card-body h-100 border-info" id="profile-wrapper">
+                    <img src="{% static 'images/images.jpeg' %}">
+                    <hr>
+                    <h4>Hi I'm Rendi Ramadhan</h4>
+                    <p>Just a normal person, doing normal things. A bit of programming</p>
+                </div>
+              </div>
+              <div class="col-md-9">
+                <div class="card card-body h-100 border-info">
+                  <h4>My First Job as a Developer</h4>
+                  <hr>
+                  <p>
+                    3 months after writing my first Hello World program on September 8th 2017 
+                    (While working in the marketing department) I had convinced my boss to let me 
+                    take a stab at building a better version of the outdated laboratory management 
+                    system my company was running on.
+                  </p>
+                  <p>
+                    Before I knew it we transitioned from the old system and we're on to mine. My newbie self 
+                    was now in charge of hosting hundreds of thousands of lab samples and supporting 
+                    thousands of clients.
+                  </p>
+                  <p>
+                    From this you’ll see that I’m someone that jumps before I can talk myself out of 
+                    doing something scary.
+                  </p>
+
+                  <ul class="social-links">
+                    <li><img class="social" src="{% static 'images/1736843991_Gemini_Generated_Image_qrnpw8qrnpw8qrnp.jpeg' %}"></li>
+                    <li><img class="social" src="{% static 'images/download_(1).jpeg' %}"></li>
+                    <li><img class="social" src="{% static 'images/download.jpeg' %}"></li>
+                    <li><img class="social" src="{% static 'images/vidiq_thumbnail_3.png' %}"></li>
+                  </ul>
+                  
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card card-body h-100">
+                        <h5>My Experience as a Developer</h5>
+                        <p>Full stack developer at FOI laboratories.</p>
+                        <p>Designed, built and managed a lab management system as a sole developer. System supported thousands of customers with a UI for Lab Admins and a customer dashboard.</p>
+                    </div>
+                </div>
+                
+                <div class="col-md-6">
+                    <div class="card card-body h-100">
+                        <h5>What I Know</h5>
+                        <p>Python, Django, HTML/CSS, JavaScript/Jquery, React, Postgres, AWS and APIs such as google maps, JavaScript charts and a whole bunch more I can't possibly mention in one sentence! ;)</p>
+                        <p>PS: Working on Node.js, Mongo DB and Machine Learning.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card card-body h-100">
+                        <h5>How I Learn</h5>
+                        <p>Reverse Engineer & Build Ugly Prototypes First.</p>
+                        <p>I can learn just about anything by having a final product to tear apart piece by piece. I break the code where I need to figure out why things work the way they do. Documentation is just a reference.</p>
+                    </div>
+                </div>
+                
+                <div class="col-md-6">
+                    <div class="card card-body h-100">
+                        <h5>My Short Term Goals</h5>
+                        <p>After almost two years of supporting my system at the lab I'm ready to learn something new. I'll be collaborating and sharing my experience with others on my blog (SayHelloworld.co) & youtube channel.</p>
+                        <p>Aside from building small projects I would love to enter a position where I can be part of a bigger team & learn from others with more experience than myself.</p>
+                    </div>
+                </div>
+            </div>
+
+          </div>
+
+          <br>
+          
+        {% comment %} <script src="" async defer></script> {% endcomment %}
     </body>
 </html>
