--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -1,3 +1,34 @@
-h3 {
+body {
+    background-color: #F8F8F8 !important;
+  }
+  
+#profile-wrapper {
+text-align: center;
+}
 
+#profile-pic {
+width: 150px;
+height: 150px;
+border-radius: 50%;
+margin-left: auto;
+margin-right: auto;
+}
+
+ul {
+padding: 0;
+list-style-type: none;
+}
+
+.social-links ul, .social-links li {
+list-style-type: none;
+display: inline-block;
+}
+
+.social {
+width: 40px;
+height: 40px;
+}
+
+.row .col-md-6{
+    margin-top: 30px;
 }
